// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 1.execute: exhaustion and levels when: [t0] artifact created, level 1 (cheapo) runs first then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: cheapo (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i1.8739656801d5e77f22.r1.md
   │
   ├─ r2: primo (l2, 0/2)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: cheapo (l1, 1/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.execute.guard.review.i1.8739656801d5e77f22.r1.md
      │   └─ r2: primo (l2, 0/2)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 1.execute: exhaustion and levels when: [t1] second attempt, cheapo uses more budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: cheapo (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
   │
   ├─ r2: primo (l2, 0/2)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: cheapo (l1, 2/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
      │   └─ r2: primo (l2, 0/2)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 1.execute: exhaustion and levels when: [t2] third attempt, cheapo exhausts budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: cheapo (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
   │
   ├─ r2: primo (l2, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i3.457fd5ef46e053a35e.r2.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: cheapo (l1, 2/2)
      │   │   ├─ exhausted, cached
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
      │   └─ r2: primo (l2, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .route/1.execute.guard.review.i3.457fd5ef46e053a35e.r2.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 1.execute: exhaustion and levels when: [t3] fourth attempt, primo uses budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: cheapo (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
   │
   ├─ r2: primo (l2, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i4.6dddc53e1de2efc1da.r2.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: cheapo (l1, 2/2)
      │   │   ├─ exhausted, cached
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
      │   └─ r2: primo (l2, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .route/1.execute.guard.review.i4.6dddc53e1de2efc1da.r2.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 1.execute: exhaustion and levels when: [t4] fifth attempt, primo exhausts budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: cheapo (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
   │
   ├─ r2: primo (l2, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i4.6dddc53e1de2efc1da.r2.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: cheapo, primo
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          ├─ r1: cheapo (l1, 2/2)
          │   ├─ exhausted, cached
          │   ├─ 1 blocker 🔴
          │   ├─ 0 nitpicks ✓
          │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
          └─ r2: primo (l2, 2/2)
              ├─ exhausted, cached
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              └─ review: .route/1.execute.guard.review.i4.6dddc53e1de2efc1da.r2.md
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 1.execute: exhaustion and levels when: [t5] human approves despite exhaustion then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.execute
   └─ ✓ approved
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 1.execute: exhaustion and levels when: [t6] pass after human approval then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: cheapo (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
   │
   ├─ r2: primo (l2, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/1.execute.guard.review.i4.6dddc53e1de2efc1da.r2.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   ├─ r1: cheapo (l1, 2/2)
   │  │   │   ├─ exhausted, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .route/1.execute.guard.review.i2.dfc5faff83ea2fcb55.r1.md
   │  │   └─ r2: primo (l2, 2/2)
   │  │       ├─ exhausted, cached
   │  │       ├─ 1 blocker 🔴
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .route/1.execute.guard.review.i4.6dddc53e1de2efc1da.r2.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 2.deploy: within-budget pass, no approval needed when: [t0] artifact created, reviewer passes within budget then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: deployer (l1, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/2.deploy.guard.review.i1.345d6c58ae9529da69.r1.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 2.deploy
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ deploy/**/*.yaml
   │  ├─ reviews
   │  │   └─ r1: deployer (l1, 1/5)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .route/2.deploy.guard.review.i1.345d6c58ae9529da69.r1.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 3.release: within-budget + explicit approval judge when: [t0] artifact created, reviewer passes but approval still needed then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: releaser (l1, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/3.release.guard.review.i1.40f6892fa1e51b0694.r1.md
   │
   ├─ ✓ judge.1 - allowed [TIME]
   │
   └─ ✗ judge.2 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 3.release
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ release/**/*.md
      ├─ reviews
      │   └─ r1: releaser (l1, 1/5)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       └─ review: .route/3.release.guard.review.i1.40f6892fa1e51b0694.r1.md
      └─ judges
          ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
          │   └─ finished [TIME] ✓
          └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 3.release: within-budget + explicit approval judge when: [t1] human approves then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.release
   └─ ✓ approved
"
`;

exports[`driver.route.peer-budget-levels.journey.acceptance given: [journey] stone 3.release: within-budget + explicit approval judge when: [t2] pass after approval then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: releaser (l1, 1/5)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .route/3.release.guard.review.i1.40f6892fa1e51b0694.r1.md
   │
   ├─ ✓ judge.1 - allowed [TIME]
   │
   └─ ✓ judge.2 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 3.release
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ release/**/*.md
   │  ├─ reviews
   │  │   └─ r1: releaser (l1, 1/5)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .route/3.release.guard.review.i1.40f6892fa1e51b0694.r1.md
   │  └─ judges
   │      ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │      │   └─ finished [TIME] ✓
   │      └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
